--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -626,7 +626,7 @@
             height: 100%;
         }
         body {
-            background: linear-gradient(0.25turn, #f69d3c, #ebf8e1, #3f87a6);
+            background: linear-gradient(0turn, #3cf64a75, #ffe);
         }
         h1.meta {
             margin: 0;
