--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -586,7 +586,7 @@
 
             document.getElementsByTagName('body')[0].style.maxWidth=(2000+'px');
             document.querySelectorAll('meta[name="viewport"]').forEach(function(elm){
-                elm.content=('width='+width);
+                elm.content=('initial-scale=1,width='+width);
             });
         }
     </script>
