eqvolの項目にクラス名当てる

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -335,22 +335,28 @@
             tableLine = document.createElement('tr');
             tableCell = document.createElement('th');
             tableCell.innerText = '▶';
+            tableCell.classList.add('eqvol_header_alert');
             tableCell.classList.add('priv');
             tableLine.append(tableCell);
             tableCell = document.createElement('th');
             tableCell.innerText = '地震検知日時';
+            tableCell.classList.add('eqvol_header_detecttime');
             tableLine.append(tableCell);
             tableCell = document.createElement('th');
             tableCell.innerText = '震央地名';
+            tableCell.classList.add('eqvol_header_centerofthequake');
             tableLine.append(tableCell);
             tableCell = document.createElement('th');
             tableCell.innerText = '最大震度';
+            tableCell.classList.add('eqvol_header_maxint');
             tableLine.append(tableCell);
             tableCell = document.createElement('th');
             tableCell.innerText = '都道府県';
+            tableCell.classList.add('eqvol_header_pref');
             tableLine.append(tableCell);
             tableCell = document.createElement('th');
             tableCell.innerText = '震度';
+            tableCell.classList.add('eqvol_header_int');
             tableLine.append(tableCell);
             arrayList.map(function(val) {});
             tableMeta.append(tableLine);
@@ -489,22 +495,28 @@
             tableLine = document.createElement('tr');
             tableCell = document.createElement('th');
             tableCell.innerText = '▶';
+            tableCell.classList.add('eqvol_header_alert');
             tableCell.classList.add('priv');
             tableLine.append(tableCell);
             tableCell = document.createElement('th');
             tableCell.innerText = '地震検知日時';
+            tableCell.classList.add('eqvol_header_detecttime');
             tableLine.append(tableCell);
             tableCell = document.createElement('th');
             tableCell.innerText = '震央地名';
+            tableCell.classList.add('eqvol_header_centerofthequake');
             tableLine.append(tableCell);
             tableCell = document.createElement('th');
             tableCell.innerText = '最大震度';
+            tableCell.classList.add('eqvol_header_maxint');
             tableLine.append(tableCell);
             tableCell = document.createElement('th');
             tableCell.innerText = '都道府県';
+            tableCell.classList.add('eqvol_header_pref');
             tableLine.append(tableCell);
             tableCell = document.createElement('th');
             tableCell.innerText = '震度';
+            tableCell.classList.add('eqvol_header_int');
             tableLine.append(tableCell);
             tableMeta.append(tableLine);
             tableBlock.append(tableMeta);
