--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -336,26 +336,32 @@
             tableCell = document.createElement('th');
             tableCell.innerText = '▶';
             tableCell.classList.add('priv');
+            tableCell.classList.add('eqvol_header');
             tableCell.classList.add('eqvol_header_alert');
             tableLine.append(tableCell);
             tableCell = document.createElement('th');
             tableCell.innerText = '地震検知日時';
+            tableCell.classList.add('eqvol_header');
             tableCell.classList.add('eqvol_header_detecttime');
             tableLine.append(tableCell);
             tableCell = document.createElement('th');
             tableCell.innerText = '震央地名';
+            tableCell.classList.add('eqvol_header');
             tableCell.classList.add('eqvol_header_centerofthequake');
             tableLine.append(tableCell);
             tableCell = document.createElement('th');
             tableCell.innerText = '最大震度';
+            tableCell.classList.add('eqvol_header');
             tableCell.classList.add('eqvol_header_maxint');
             tableLine.append(tableCell);
             tableCell = document.createElement('th');
             tableCell.innerText = '都道府県';
+            tableCell.classList.add('eqvol_header');
             tableCell.classList.add('eqvol_header_pref');
             tableLine.append(tableCell);
             tableCell = document.createElement('th');
             tableCell.innerText = '震度';
+            tableCell.classList.add('eqvol_header');
             tableCell.classList.add('eqvol_header_int');
             tableLine.append(tableCell);
             arrayList.map(function(val) {});
@@ -496,26 +502,32 @@
             tableCell = document.createElement('th');
             tableCell.innerText = '▶';
             tableCell.classList.add('priv');
+            tableCell.classList.add('eqvol_header');
             tableCell.classList.add('eqvol_header_alert');
             tableLine.append(tableCell);
             tableCell = document.createElement('th');
             tableCell.innerText = '地震検知日時';
+            tableCell.classList.add('eqvol_header');
             tableCell.classList.add('eqvol_header_detecttime');
             tableLine.append(tableCell);
             tableCell = document.createElement('th');
             tableCell.innerText = '震央地名';
+            tableCell.classList.add('eqvol_header');
             tableCell.classList.add('eqvol_header_centerofthequake');
             tableLine.append(tableCell);
             tableCell = document.createElement('th');
             tableCell.innerText = '最大震度';
+            tableCell.classList.add('eqvol_header');
             tableCell.classList.add('eqvol_header_maxint');
             tableLine.append(tableCell);
             tableCell = document.createElement('th');
             tableCell.innerText = '都道府県';
+            tableCell.classList.add('eqvol_header');
             tableCell.classList.add('eqvol_header_pref');
             tableLine.append(tableCell);
             tableCell = document.createElement('th');
             tableCell.innerText = '震度';
+            tableCell.classList.add('eqvol_header');
             tableCell.classList.add('eqvol_header_int');
             tableLine.append(tableCell);
             tableMeta.append(tableLine);
