ページ固有CSS

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -668,9 +668,6 @@
             white-space:nowrap;
             vertical-align: top;
         }
-        th.priv, td.priv {
-            display: none;
-        }
         @media screen and (orientation: portrait) {
             .display_landscape {
                 display: none;
@@ -686,6 +683,11 @@
             .display_portrait_text {
                 opacity: 0;
             }
+        }
+    </style>
+    <style>
+        th.priv, td.priv {
+            display: none;
         }
     </style>
     <style>
