--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -689,6 +689,27 @@
         th.priv, td.priv {
             display: none;
         }
+        .eqvol_header {
+            min-width: 10px;
+        }
+        .eqvol_header_alert {
+            width: 100px;
+        }
+        .eqvol_header_detecttime {
+            width: 160px;
+        }
+        .eqvol_header_centerofthequake {
+            width: 120px;
+        }
+        .eqvol_header_maxint {
+            width: 70px;
+        }
+        .eqvol_header_pref {
+            width: 70px;
+        }
+        .eqvol_header_int {
+            width: 70px;
+        }
     </style>
     <style>
         img.g_id_icon {
