8de865c2bd969d2848973e48b90f432a6dc494cd

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -548,6 +548,7 @@
                 tableLine = document.createElement('tr');
                 tableCell = document.createElement('td');
                 tableCell.classList.add('priv');
+                tableCell.classList.add('eqvol_body');
                 tableText = document.createComment(JSON.stringify(val_r));
                 tableCell.append(tableText);
                 tableLine.append(tableCell);
