--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -405,6 +405,7 @@
                 tableCell = document.createElement('td');
                 tableCell.classList.add('eqvol_body');
                 tableCell.classList.add('eqvol_body_maxint');
+                tableCell.classList.add('eqvol_body_maxint'+'_'+parseInt(val_r.detail.Body.Intensity.Observation.MaxInt, 10));
                 tableCell.innerText = val_r.detail.Body.Intensity.Observation.MaxInt;
                 tableCell.style.textAlign='right';
                 tableLine.append(tableCell);
@@ -578,6 +579,7 @@
                 tableCell.innerText = val_r.detail.Body.Intensity.Observation.MaxInt;
                 tableCell.classList.add('eqvol_body');
                 tableCell.classList.add('eqvol_body_maxint');
+                tableCell.classList.add('eqvol_body_maxint'+'_'+parseInt(val_r.detail.Body.Intensity.Observation.MaxInt, 10));
                 tableCell.style.textAlign='right';
                 tableLine.append(tableCell);
                 tableCell = document.createElement('td');
