CSS .eqvol_body_maxint_n

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -732,6 +732,9 @@
         .eqvol_header_int {
             width: 70px;
         }
+        .eqvol_body_maxint_3 { }
+        .eqvol_body_maxint_4 { }
+        .eqvol_body_maxint_5 { }
     </style>
     <style>
         img.g_id_icon {
