--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -732,9 +732,21 @@
         .eqvol_header_int {
             width: 70px;
         }
-        .eqvol_body_maxint_3 { }
-        .eqvol_body_maxint_4 { }
-        .eqvol_body_maxint_5 { }
+        .eqvol_body_maxint_3 {
+            background: radial-gradient(khaki, yellow);
+        }
+        .eqvol_body_maxint_4 {
+            background: radial-gradient(khaki, orange);
+        }
+        .eqvol_body_maxint_5 {
+            background: radial-gradient(khaki, red);
+        }
+        .eqvol_body_maxint_6 {
+            background: radial-gradient(khaki, red);
+        }
+        .eqvol_body_maxint_7 {
+            background: radial-gradient(khaki, red);
+        }
     </style>
     <style>
         img.g_id_icon {
