function onSignIn OK時 return

--- a/sample2/xmlfeed_eqvol.html
+++ b/sample2/xmlfeed_eqvol.html
@@ -49,6 +49,8 @@
                             g_id_icon_link.append(g_id_icon_img);
                             class_g_id_signin.append(g_id_icon_link);
                         });
+
+                        return get_gsso();
                     } else {
                         set_gsso(null);
                         return false;
